Try to resolve issue with content overflowing.

--- a/alpha/stylesheets/style.css
+++ b/alpha/stylesheets/style.css
@@ -268,7 +268,7 @@ input[type=text], select, textarea {
     }
 
     ul.list-with-icon > li {
-        width: 90%;
+        width: 85%;
     }
 
     .centered-dynamic {
